--- a/shows.html
+++ b/shows.html
@@ -8,7 +8,7 @@
   <!-- ===== Open Graph / Social Preview ===== -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Shows · Terry Cole Podcast Studio">
-  <meta property="og:description" content="Podcasts and recorded audio projects produced by the Terry Cole Broadcast & Recording Studio.">
+  <meta property="og:description" content="Listen to podcasts and audio projects produced by the Terry Cole Podcast Studio, hosted on iHeart.">
   <meta property="og:image" content="https://terrycolepodcaststudio.com/og-image.png">
   <meta property="og:url" content="https://terrycolepodcaststudio.com/shows.html">
   <meta property="og:site_name" content="Terry Cole Podcast Studio">
@@ -16,8 +16,10 @@
   <!-- Twitter / X -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Shows · Terry Cole Podcast Studio">
-  <meta name="twitter:description" content="Podcasts and recorded audio projects produced by the Terry Cole Broadcast & Recording Studio.">
+  <meta name="twitter:description" content="Listen to podcasts and audio projects produced by the Terry Cole Podcast Studio, hosted on iHeart.">
   <meta name="twitter:image" content="https://terrycolepodcaststudio.com/og-image.png">
+
+  <link rel="icon" href="/favicon.ico">
 
   <style>
     body {
@@ -45,14 +47,6 @@
       align-items: center;
       gap: 16px;
       margin-bottom: 12px;
-    }
-
-    .branding a {
-      display: flex;
-      align-items: center;
-      gap: 16px;
-      text-decoration: none;
-      color: inherit;
     }
 
     .site-logo {
@@ -86,7 +80,7 @@
 
     /* ===== CONTENT ===== */
     h2 {
-      font-size: 28px;
+      font-size: 30px;
       margin-top: 0;
     }
 
@@ -96,54 +90,38 @@
     }
 
     .show {
-      margin-bottom: 48px;
+      margin-bottom: 64px;
     }
 
     .show h3 {
       color: #8b0000;
+      font-size: 1.45rem;
       margin-bottom: 6px;
-      font-size: 1.35rem;
-    }
-
-    /* iHeart badge */
-    .listen-links {
-      margin: 6px 0 14px;
     }
 
     .iheart-badge {
-      display: inline-flex;
-      align-items: center;
-      gap: 6px;
-      font-size: 0.85rem;
-      font-weight: 700;
-      color: #c60000;
-      text-decoration: none;
+      display: inline-block;
+      margin: 6px 0 14px;
     }
 
-    .iheart-badge::before {
-      content: "♥";
-      font-size: 0.9rem;
-      line-height: 1;
-    }
-
-    .iheart-badge:hover {
-      text-decoration: underline;
+    .iheart-badge img {
+      height: 28px;
+      display: block;
     }
 
     iframe {
+      width: 100%;
+      height: 350px;
       border: none;
-      margin-top: 10px;
     }
 
-    /* Divider between shows */
-    .studio-divider {
-      text-align: center;
-      font-size: 0.75rem;
+    .producer-divider {
+      margin: 22px 0 0;
+      font-size: 0.85rem;
       color: #777;
-      letter-spacing: 0.04em;
-      margin: 44px 0;
-      padding-top: 18px;
-      border-top: 1px solid #ddd;
+      border-top: 1px solid #e0e0e0;
+      padding-top: 8px;
+      font-style: italic;
     }
 
     footer {
@@ -154,7 +132,6 @@
       color: #555;
     }
 
-    /* ===== MOBILE ===== */
     @media (max-width: 640px) {
       .branding {
         flex-direction: column;
@@ -164,14 +141,6 @@
 
       .site-logo {
         width: 72px;
-      }
-
-      .site-title h1 {
-        font-size: 18px;
-      }
-
-      .site-parent {
-        font-size: 13px;
       }
     }
   </style>
@@ -184,14 +153,12 @@
   <header class="site-header">
     <div class="branding">
       <a href="/">
-        <img src="/logo.jpg" alt="Terry Cole Podcast Studio logo" class="site-logo" />
-        <div class="site-title">
-          <h1>Terry Cole Podcast Studio</h1>
-          <p class="site-parent">
-            Part of the Terry Cole Broadcast &amp; Recording Studio
-          </p>
-        </div>
+        <img src="/logo.jpg" alt="Terry Cole Podcast Studio logo" class="site-logo">
       </a>
+      <div class="site-title">
+        <h1><a href="/" style="text-decoration:none;color:#111;">Terry Cole Podcast Studio</a></h1>
+        <p class="site-parent">Part of the Terry Cole Broadcast &amp; Recording Studio</p>
+      </div>
     </div>
 
     <nav class="site-nav">
@@ -207,109 +174,79 @@
     <h2>Shows &amp; Audio Projects</h2>
     <div class="rule"></div>
 
-    <!-- SHOW 1 -->
+    <!-- SHOW -->
     <div class="show">
       <h3>🎙️ Terry Cole’s Audio Archives</h3>
-      <div class="listen-links">
-        <a class="iheart-badge"
-           href="https://www.iheart.com/podcast/53-terry-coles-audio-archives-102630732"
-           target="_blank" rel="noopener">
-          Listen on iHeart
-        </a>
+
+      <a class="iheart-badge"
+         href="https://www.iheart.com/podcast/53-terry-coles-audio-archives-102630732"
+         target="_blank" rel="noopener">
+        <img src="/assets/iheart-listen-badge.png" alt="Listen on iHeart">
+      </a>
+
+      <iframe src="https://widget.spreaker.com/player?show_id=5365299&theme=light&playlist=show&playlist-continuous=false&episode_image_position=left&hide-logo=true&hide-likes=true&hide-comments=true&hide-sharing=true&hide-download=true"></iframe>
+
+      <div class="producer-divider">
+        Produced by the Terry Cole Broadcast &amp; Recording Studio
       </div>
-      <iframe src="https://widget.spreaker.com/player?show_id=5365299&theme=light&playlist=show&playlist-continuous=false&chapters-image=true&episode_image_position=left&hide-logo=true&hide-likes=true&hide-comments=true&hide-sharing=true&hide-download=true"
-              width="100%" height="350"></iframe>
     </div>
 
-    <div class="studio-divider">
-      Produced by the Terry Cole Broadcast &amp; Recording Studio
-    </div>
-
-    <!-- SHOW 2 -->
+    <!-- SHOW -->
     <div class="show">
       <h3>🎧 OSSB Inside and Out</h3>
-      <div class="listen-links">
-        <a class="iheart-badge"
-           href="https://www.iheart.com/podcast/1248-ossb-inside-and-out-54604516"
-           target="_blank" rel="noopener">
-          Listen on iHeart
-        </a>
+
+      <a class="iheart-badge"
+         href="https://www.iheart.com/podcast/1248-ossb-inside-and-out-54604516"
+         target="_blank" rel="noopener">
+        <img src="/assets/iheart-listen-badge.png" alt="Listen on iHeart">
+      </a>
+
+      <iframe src="https://widget.spreaker.com/player?show_id=4120454&theme=light&playlist=show&playlist-continuous=false&episode_image_position=left&hide-logo=true&hide-likes=true&hide-comments=true&hide-sharing=true&hide-download=true"></iframe>
+
+      <div class="producer-divider">
+        Produced by the Terry Cole Broadcast &amp; Recording Studio
       </div>
-      <iframe src="https://widget.spreaker.com/player?show_id=4120454&theme=light&playlist=show&playlist-continuous=false&chapters-image=true&episode_image_position=left&hide-logo=true&hide-likes=true&hide-comments=true&hide-sharing=true&hide-download=true"
-              width="100%" height="350"></iframe>
     </div>
 
-    <div class="studio-divider">
-      Produced by the Terry Cole Broadcast &amp; Recording Studio
-    </div>
-
-    <!-- SHOW 3 -->
+    <!-- SHOW -->
     <div class="show">
       <h3>🎚️ Brendon Hamblin’s Audio Projects</h3>
-      <div class="listen-links">
-        <a class="iheart-badge"
-           href="https://iheart.com/podcast/314657466"
-           target="_blank" rel="noopener">
-          Listen on iHeart
-        </a>
+
+      <a class="iheart-badge"
+         href="https://www.iheart.com/podcast/314657466"
+         target="_blank" rel="noopener">
+        <img src="/assets/iheart-listen-badge.png" alt="Listen on iHeart">
+      </a>
+
+      <iframe src="https://widget.spreaker.com/player?show_id=4664315&theme=light&playlist=show&playlist-continuous=false&episode_image_position=left&hide-logo=true&hide-likes=true&hide-comments=true&hide-sharing=true&hide-download=true"></iframe>
+
+      <div class="producer-divider">
+        Produced by the Terry Cole Broadcast &amp; Recording Studio
       </div>
-      <iframe src="https://widget.spreaker.com/player?show_id=4664315&theme=light&playlist=show&playlist-continuous=false&chapters-image=true&episode_image_position=left&hide-logo=true&hide-likes=true&hide-comments=true&hide-sharing=true&hide-download=true"
-              width="100%" height="350"></iframe>
     </div>
 
-    <div class="studio-divider">
-      Produced by the Terry Cole Broadcast &amp; Recording Studio
-    </div>
-
-    <!-- SHOW 4 -->
+    <!-- SHOW -->
     <div class="show">
       <h3>🎤 Andy &amp; Steph’s Top Ten Podcast</h3>
-      <div class="listen-links">
-        <a class="iheart-badge"
-           href="https://www.iheart.com/podcast/53-andy-stephs-top-ten-podcast-85580398"
-           target="_blank" rel="noopener">
-          Listen on iHeart
-        </a>
+
+      <a class="iheart-badge"
+         href="https://www.iheart.com/podcast/53-andy-stephs-top-ten-podcast-85580398"
+         target="_blank" rel="noopener">
+        <img src="/assets/iheart-listen-badge.png" alt="Listen on iHeart">
+      </a>
+
+      <iframe src="https://widget.spreaker.com/player?show_id=5020228&theme=light&playlist=show&playlist-continuous=false&episode_image_position=left&hide-logo=true&hide-likes=true&hide-comments=true&hide-sharing=true&hide-download=true"></iframe>
+
+      <div class="producer-divider">
+        Produced by the Terry Cole Broadcast &amp; Recording Studio
       </div>
-      <iframe src="https://widget.spreaker.com/player?show_id=5020228&theme=light&playlist=show&playlist-continuous=false&chapters-image=true&episode_image_position=left&hide-logo=true&hide-likes=true&hide-comments=true&hide-sharing=true&hide-download=true"
-              width="100%" height="350"></iframe>
     </div>
 
-    <div class="studio-divider">
-      Produced by the Terry Cole Broadcast &amp; Recording Studio
-    </div>
-
-    <!-- SHOW 5 -->
+    <!-- SHOW -->
     <div class="show">
       <h3>🎙️ The Andy &amp; Brendon Podcast</h3>
-      <div class="listen-links">
-        <a class="iheart-badge"
-           href="https://iheart.com/podcast/74317125"
-           target="_blank" rel="noopener">
-          Listen on iHeart
-        </a>
-      </div>
-      <iframe src="https://widget.spreaker.com/player?show_id=4580634&theme=light&playlist=show&playlist-continuous=false&chapters-image=true&episode_image_position=left&hide-logo=true&hide-likes=true&hide-comments=true&hide-sharing=true&hide-download=true"
-              width="100%" height="350"></iframe>
-    </div>
 
-  </main>
-
-  <!-- ===== FOOTER ===== -->
-  <footer>
-    <p>
-      <em>Broadcast legacy. Recorded with care.</em><br>
-      Studio updates and related materials are occasionally shared on
-      <a href="https://www.facebook.com/TerryColePodcastStudio"
-         target="_blank" rel="noopener">Facebook</a>.
-    </p>
-
-    <p>
-      © Terry Cole Podcast Studio<br>
-      Part of the Terry Cole Broadcast &amp; Recording Studio
-    </p>
-  </footer>
-
-</div>
-</body>
-</html>
+      <a class="iheart-badge"
+         href="https://iheart.com/podcast/74317125"
+         target="_blank" rel="noopener">
+        <img src="/assets/iheart-listen-badge.png" alt="
