--- a/shows.html
+++ b/shows.html
@@ -35,7 +35,6 @@
       padding: 32px 24px;
     }
 
-    /* ===== HEADER ===== */
     .site-header {
       margin-bottom: 40px;
     }
@@ -76,7 +75,6 @@
       font-weight: 600;
     }
 
-    /* ===== CONTENT ===== */
     h2 {
       font-size: 28px;
       margin-top: 0;
@@ -134,7 +132,6 @@
       color: #555;
     }
 
-    /* ===== MOBILE ===== */
     @media (max-width: 640px) {
       .branding {
         flex-direction: column;
@@ -153,7 +150,7 @@
 <body>
 <div class="container">
 
-  <!-- ===== HEADER ===== -->
+  <!-- HEADER -->
   <header class="site-header">
     <div class="branding">
       <a href="/">
@@ -175,85 +172,73 @@
     </nav>
   </header>
 
-  <!-- ===== MAIN ===== -->
+  <!-- MAIN -->
   <main>
     <h2>Shows &amp; Audio Projects</h2>
     <div class="rule"></div>
 
-    <!-- SHOW 1 -->
+    <!-- SHOWS -->
     <div class="show">
       <h3>🎙️ Terry Cole’s Audio Archives</h3>
       <div class="listen-badge">
         <a href="https://www.iheart.com/podcast/53-terry-coles-audio-archives-102630732" target="_blank" rel="noopener">
-          <img src="/assets/iheart-listen-black.png" alt="Listen on iHeart">
+          <img src="/iheart-listen-black.png" alt="Listen on iHeart">
         </a>
       </div>
       <iframe src="https://widget.spreaker.com/player?show_id=5365299&theme=light&playlist=show&episode_image_position=left&hide-logo=true&hide-likes=true&hide-comments=true&hide-sharing=true&hide-download=true"
-              width="100%" height="350" title="Terry Cole’s Audio Archives"></iframe>
+              width="100%" height="350"></iframe>
     </div>
 
-    <div class="studio-divider">
-      Produced by the Terry Cole Broadcast &amp; Recording Studio
-    </div>
+    <div class="studio-divider">Produced by the Terry Cole Broadcast &amp; Recording Studio</div>
 
-    <!-- SHOW 2 -->
     <div class="show">
       <h3>🎧 OSSB Inside and Out</h3>
       <div class="listen-badge">
         <a href="https://www.iheart.com/podcast/1248-ossb-inside-and-out-54604516" target="_blank" rel="noopener">
-          <img src="/assets/iheart-listen-black.png" alt="Listen on iHeart">
+          <img src="/iheart-listen-black.png" alt="Listen on iHeart">
         </a>
       </div>
       <iframe src="https://widget.spreaker.com/player?show_id=4120454&theme=light&playlist=show&episode_image_position=left&hide-logo=true&hide-likes=true&hide-comments=true&hide-sharing=true&hide-download=true"
-              width="100%" height="350" title="OSSB Inside and Out"></iframe>
+              width="100%" height="350"></iframe>
     </div>
 
-    <div class="studio-divider">
-      Produced by the Terry Cole Broadcast &amp; Recording Studio
-    </div>
+    <div class="studio-divider">Produced by the Terry Cole Broadcast &amp; Recording Studio</div>
 
-    <!-- SHOW 3 -->
     <div class="show">
       <h3>🎚️ Brendon Hamblin’s Audio Projects</h3>
       <div class="listen-badge">
         <a href="https://iheart.com/podcast/314657466" target="_blank" rel="noopener">
-          <img src="/assets/iheart-listen-black.png" alt="Listen on iHeart">
+          <img src="/iheart-listen-black.png" alt="Listen on iHeart">
         </a>
       </div>
       <iframe src="https://widget.spreaker.com/player?show_id=4664315&theme=light&playlist=show&episode_image_position=left&hide-logo=true&hide-likes=true&hide-comments=true&hide-sharing=true&hide-download=true"
-              width="100%" height="350" title="Brendon Hamblin’s Audio Projects"></iframe>
+              width="100%" height="350"></iframe>
     </div>
 
-    <div class="studio-divider">
-      Produced by the Terry Cole Broadcast &amp; Recording Studio
-    </div>
+    <div class="studio-divider">Produced by the Terry Cole Broadcast &amp; Recording Studio</div>
 
-    <!-- SHOW 4 -->
     <div class="show">
       <h3>🎤 Andy &amp; Steph’s Top Ten Podcast</h3>
       <div class="listen-badge">
         <a href="https://www.iheart.com/podcast/53-andy-stephs-top-ten-podcast-85580398" target="_blank" rel="noopener">
-          <img src="/assets/iheart-listen-black.png" alt="Listen on iHeart">
+          <img src="/iheart-listen-black.png" alt="Listen on iHeart">
         </a>
       </div>
       <iframe src="https://widget.spreaker.com/player?show_id=5020228&theme=light&playlist=show&episode_image_position=left&hide-logo=true&hide-likes=true&hide-comments=true&hide-sharing=true&hide-download=true"
-              width="100%" height="350" title="Andy &amp; Steph’s Top Ten Podcast"></iframe>
+              width="100%" height="350"></iframe>
     </div>
 
-    <div class="studio-divider">
-      Produced by the Terry Cole Broadcast &amp; Recording Studio
-    </div>
+    <div class="studio-divider">Produced by the Terry Cole Broadcast &amp; Recording Studio</div>
 
-    <!-- SHOW 5 -->
     <div class="show">
       <h3>🎙️ The Andy &amp; Brendon Podcast</h3>
       <div class="listen-badge">
         <a href="https://iheart.com/podcast/74317125" target="_blank" rel="noopener">
-          <img src="/assets/iheart-listen-black.png" alt="Listen on iHeart">
+          <img src="/iheart-listen-black.png" alt="Listen on iHeart">
         </a>
       </div>
       <iframe src="https://widget.spreaker.com/player?show_id=4580634&theme=light&playlist=show&episode_image_position=left&hide-logo=true&hide-likes=true&hide-comments=true&hide-sharing=true&hide-download=true"
-              width="100%" height="350" title="The Andy &amp; Brendon Podcast"></iframe>
+              width="100%" height="350"></iframe>
     </div>
 
     <div class="about-playback">
@@ -266,7 +251,6 @@
     </div>
   </main>
 
-  <!-- ===== FOOTER ===== -->
   <footer>
     <p>
       <em>Broadcast legacy. Recorded with care.</em><br>
